--- a/config.json
+++ b/config.json
@@ -13,15 +13,13 @@
     "eventDisabled": [
         "join.js"
     ],
-    "EMAIL": "",
+    "EMAIL": "hossinshohag586@gmail.com",
     "PASSWORD": "",
     "OTPKEY": "",
-    "BOTNAME": "─꯭─⃝‌‌𝐒𝐡𝐚𝐡𝐚𝐝𝐚𝐭 𝐂𝐡𝐚𝐭 𝐁𝐨𝐭",
+    "BOTNAME": "MAKIMA 😇🫰",
     "PREFIX": "/",
     "ADMINBOT": [
-        "100001039692046",
-        "100001039692046",
-        "100001039692046"
+        "61576296543095"
     ],
     "NDH": [
         "100001039692046"
