--- a/appstate.json
+++ b/appstate.json
@@ -1,1 +1,137 @@
-এখানে আপনার ফেসবুক আইডির কুকি বসান ✅
+[
+    {
+        "key": "dbln",
+        "value": "%7B%2261580437316135%22%3A%22U5mFzD9i%22%7D",
+        "domain": "facebook.com",
+        "path": "/login/device-based/",
+        "hostOnly": false,
+        "creation": "2025-09-21T17:41:39.324Z",
+        "lastAccessed": "2025-09-21T17:41:39.324Z"
+    },
+    {
+        "key": "datr",
+        "value": "16i6aMhXBml2wszZ3DGlgILz",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-09-21T17:41:39.324Z",
+        "lastAccessed": "2025-09-21T17:41:39.324Z"
+    },
+    {
+        "key": "sb",
+        "value": "16i6aHGQUfUDStLCY1OlnNs1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-09-21T17:41:39.324Z",
+        "lastAccessed": "2025-09-21T17:41:39.324Z"
+    },
+    {
+        "key": "ps_l",
+        "value": "1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-09-21T17:41:39.324Z",
+        "lastAccessed": "2025-09-21T17:41:39.324Z"
+    },
+    {
+        "key": "ps_n",
+        "value": "1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-09-21T17:41:39.324Z",
+        "lastAccessed": "2025-09-21T17:41:39.324Z"
+    },
+    {
+        "key": "pas",
+        "value": "61580437316135%3AOQ3GuPquWX%2C61580370651619%3Ar4jHqdeCpY",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-09-21T17:41:39.324Z",
+        "lastAccessed": "2025-09-21T17:41:39.324Z"
+    },
+    {
+        "key": "vpd",
+        "value": "v1%3B794x424x1.7000000476837158",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-09-21T17:41:39.324Z",
+        "lastAccessed": "2025-09-21T17:41:39.324Z"
+    },
+    {
+        "key": "dpr",
+        "value": "1.7000000476837158",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-09-21T17:41:39.324Z",
+        "lastAccessed": "2025-09-21T17:41:39.324Z"
+    },
+    {
+        "key": "c_user",
+        "value": "61580370651619",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-09-21T17:41:39.324Z",
+        "lastAccessed": "2025-09-21T17:41:39.324Z"
+    },
+    {
+        "key": "wd",
+        "value": "424x794",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-09-21T17:41:39.325Z",
+        "lastAccessed": "2025-09-21T17:41:39.325Z"
+    },
+    {
+        "key": "locale",
+        "value": "en_US",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-09-21T17:41:39.325Z",
+        "lastAccessed": "2025-09-21T17:41:39.325Z"
+    },
+    {
+        "key": "fbl_st",
+        "value": "100635197%3BT%3A29307825",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-09-21T17:41:39.325Z",
+        "lastAccessed": "2025-09-21T17:41:39.325Z"
+    },
+    {
+        "key": "wl_cbv",
+        "value": "v2%3Bclient_version%3A2929%3Btimestamp%3A1758469535",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-09-21T17:41:39.325Z",
+        "lastAccessed": "2025-09-21T17:41:39.325Z"
+    },
+    {
+        "key": "fr",
+        "value": "1RnHlVmEOnHqXxcJD.AWeCis9bCzR7Y1Rvtj_aiFB2ZyCwbVYLJg9sjWnp-fweFKDbrUM.Bo0B2i..AAA.0.0.Bo0B2i.AWc4JSY5MxdDvYaIjnhzTge2LP4",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-09-21T17:41:39.325Z",
+        "lastAccessed": "2025-09-21T17:41:39.325Z"
+    },
+    {
+        "key": "xs",
+        "value": "26%3AFL3XFxnZkmdkSQ%3A2%3A1758262519%3A-1%3A-1%3A%3AAcVH4xzr3Gs2t5krO5XrlOSTJGHvTuxBDUrjlPwFZg",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-09-21T17:41:39.325Z",
+        "lastAccessed": "2025-09-21T17:41:39.325Z"
+    }
+]
