--- a/config.json
+++ b/config.json
@@ -17,7 +17,7 @@
     "PASSWORD": "",
     "OTPKEY": "",
     "BOTNAME": "MAKIMA 😇🫰",
-    "PREFIX": "/",
+    "PREFIX": "!",
     "ADMINBOT": [
         "61576296543095"
     ],
