--- a/appstate.json
+++ b/appstate.json
@@ -5,8 +5,8 @@
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2025-09-21T17:41:39.324Z",
-        "lastAccessed": "2025-09-21T17:41:39.324Z"
+        "creation": "2025-09-21T18:14:01.597Z",
+        "lastAccessed": "2025-09-21T18:14:01.597Z"
     },
     {
         "key": "datr",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-09-21T17:41:39.324Z",
-        "lastAccessed": "2025-09-21T17:41:39.324Z"
+        "creation": "2025-09-21T18:14:01.597Z",
+        "lastAccessed": "2025-09-21T18:14:01.597Z"
     },
     {
         "key": "sb",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-09-21T17:41:39.324Z",
-        "lastAccessed": "2025-09-21T17:41:39.324Z"
+        "creation": "2025-09-21T18:14:01.597Z",
+        "lastAccessed": "2025-09-21T18:14:01.597Z"
     },
     {
         "key": "ps_l",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-09-21T17:41:39.324Z",
-        "lastAccessed": "2025-09-21T17:41:39.324Z"
+        "creation": "2025-09-21T18:14:01.597Z",
+        "lastAccessed": "2025-09-21T18:14:01.597Z"
     },
     {
         "key": "ps_n",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-09-21T17:41:39.324Z",
-        "lastAccessed": "2025-09-21T17:41:39.324Z"
+        "creation": "2025-09-21T18:14:01.597Z",
+        "lastAccessed": "2025-09-21T18:14:01.597Z"
     },
     {
         "key": "pas",
@@ -50,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-09-21T17:41:39.324Z",
-        "lastAccessed": "2025-09-21T17:41:39.324Z"
+        "creation": "2025-09-21T18:14:01.597Z",
+        "lastAccessed": "2025-09-21T18:14:01.597Z"
     },
     {
         "key": "vpd",
@@ -59,8 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-09-21T17:41:39.324Z",
-        "lastAccessed": "2025-09-21T17:41:39.324Z"
+        "creation": "2025-09-21T18:14:01.597Z",
+        "lastAccessed": "2025-09-21T18:14:01.597Z"
     },
     {
         "key": "dpr",
@@ -68,8 +68,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-09-21T17:41:39.324Z",
-        "lastAccessed": "2025-09-21T17:41:39.324Z"
+        "creation": "2025-09-21T18:14:01.597Z",
+        "lastAccessed": "2025-09-21T18:14:01.597Z"
     },
     {
         "key": "c_user",
@@ -77,17 +77,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-09-21T17:41:39.324Z",
-        "lastAccessed": "2025-09-21T17:41:39.324Z"
-    },
-    {
-        "key": "wd",
-        "value": "424x794",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-09-21T17:41:39.325Z",
-        "lastAccessed": "2025-09-21T17:41:39.325Z"
+        "creation": "2025-09-21T18:14:01.597Z",
+        "lastAccessed": "2025-09-21T18:14:01.597Z"
     },
     {
         "key": "locale",
@@ -95,43 +86,61 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-09-21T17:41:39.325Z",
-        "lastAccessed": "2025-09-21T17:41:39.325Z"
+        "creation": "2025-09-21T18:14:01.597Z",
+        "lastAccessed": "2025-09-21T18:14:01.597Z"
     },
     {
-        "key": "fbl_st",
-        "value": "100635197%3BT%3A29307825",
+        "key": "m_pixel_ratio",
+        "value": "1.7000000476837158",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-09-21T17:41:39.325Z",
-        "lastAccessed": "2025-09-21T17:41:39.325Z"
+        "creation": "2025-09-21T18:14:01.597Z",
+        "lastAccessed": "2025-09-21T18:14:01.597Z"
     },
     {
-        "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2929%3Btimestamp%3A1758469535",
+        "key": "wd",
+        "value": "424x949",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-09-21T17:41:39.325Z",
-        "lastAccessed": "2025-09-21T17:41:39.325Z"
-    },
-    {
-        "key": "fr",
-        "value": "1RnHlVmEOnHqXxcJD.AWeCis9bCzR7Y1Rvtj_aiFB2ZyCwbVYLJg9sjWnp-fweFKDbrUM.Bo0B2i..AAA.0.0.Bo0B2i.AWc4JSY5MxdDvYaIjnhzTge2LP4",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-09-21T17:41:39.325Z",
-        "lastAccessed": "2025-09-21T17:41:39.325Z"
+        "creation": "2025-09-21T18:14:01.597Z",
+        "lastAccessed": "2025-09-21T18:14:01.597Z"
     },
     {
         "key": "xs",
-        "value": "26%3AFL3XFxnZkmdkSQ%3A2%3A1758262519%3A-1%3A-1%3A%3AAcVH4xzr3Gs2t5krO5XrlOSTJGHvTuxBDUrjlPwFZg",
+        "value": "26%3AFL3XFxnZkmdkSQ%3A2%3A1758262519%3A-1%3A-1%3A%3AAcVVrq6H_iz11bsPhK814ATqQfdf209EuyTuFahhNw",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-09-21T17:41:39.325Z",
-        "lastAccessed": "2025-09-21T17:41:39.325Z"
+        "creation": "2025-09-21T18:14:01.597Z",
+        "lastAccessed": "2025-09-21T18:14:01.597Z"
+    },
+    {
+        "key": "fr",
+        "value": "121VdD5Sx8fNlIaLk.AWeqCCPy51bcAgM6wpgs8Udr22Se03EQkmlFCmDad3yD8UMwK6o.Bo0EBJ..AAA.0.0.Bo0EBL.AWchKBpN0IFMIxcUl6nf21V5yYk",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-09-21T18:14:01.597Z",
+        "lastAccessed": "2025-09-21T18:14:01.597Z"
+    },
+    {
+        "key": "fbl_st",
+        "value": "101738873%3BT%3A29307973",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-09-21T18:14:01.597Z",
+        "lastAccessed": "2025-09-21T18:14:01.597Z"
+    },
+    {
+        "key": "wl_cbv",
+        "value": "v2%3Bclient_version%3A2930%3Btimestamp%3A1758478411",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-09-21T18:14:01.597Z",
+        "lastAccessed": "2025-09-21T18:14:01.597Z"
     }
 ]
